--- a/Web Pages/RegisterPage.html
+++ b/Web Pages/RegisterPage.html
@@ -85,10 +85,6 @@
             formData.append('password', password);
             formData.append('user_type', userType);
 
-            if (userType === 'student' || userType === 'teacher') {
-                formData.append('access_code', accessCode);
-            }
-
             // If user is a member, store the data in localStorage and redirect to payment page
             if (userType === 'member') {
                 localStorage.setItem('registrationData', JSON.stringify({
@@ -99,18 +95,21 @@
                 }));
                 
                 // Redirect to payment page
-                window.location.href = "Web Pages/PaymentPage.html";
-            } else {
+                window.location.href = "/Web Pages/PaymentPage.html";
+            }
+
+            else if (userType === 'student' || userType === 'teacher') {
+                formData.append('access_code', accessCode);
                 // Handle student or teacher registration immediately
-                fetch('http://127.0.0.1:5001/register', {
+                fetch('/register', {
                     method: 'POST',
                     body: formData
                 })
-                .then(response => response.json())
-                .then(result => {
+                .then(async response => {
+                    let result = await response.json(); // Parse JSON correctly
                     if (response.ok) {
                         alert(result.message);
-                        window.location.href = 'Web Pages/LoginPage.html';  // Redirect to login page
+                        window.location.href = '/Web Pages/LoginPage.html';  // Redirect to login page
                     } else {
                         alert("Error: " + result.error);
                     }
