Fixed nav bar in register, added username already exits

--- a/Web Pages/RegisterPage.html
+++ b/Web Pages/RegisterPage.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="/Web Pages/LoginRegister.css" type="text/css">
 </head>
 <body>
-    <header>
+    <div class="navbar">
         <a href="/Web Pages/HomePage.html">
             <img src="/Web Pages/Images/komodoLogo.png" alt="Logo" class="logo">
         </a>
-    </header>
+    </div>
     <div class="form-container register-box">
         <h2 class="form-title">Register to Komodo Hub</h2>
         <form id="registerForm" action="/register" method="POST">
