--- a/Web Pages/PaymentPage.html
+++ b/Web Pages/PaymentPage.html
@@ -163,7 +163,7 @@
                     if (result.message) {
                         alert(result.message);  // Registration successful
                         localStorage.removeItem('registrationData');  // Remove registration data after successful payment
-                        window.location.href = '/Web Pages/LoginPage.html';  // Redirect to login page
+                        window.location.replace('/Web Pages/LoginPage.html');  // Redirect to login page
                     } else {
                         alert("Error: " + result.error);
                     }
