--- a/Web Pages/RegisterPage.html
+++ b/Web Pages/RegisterPage.html
@@ -95,7 +95,7 @@
                 }));
                 
                 // Redirect to payment page
-                window.location.href = "/Web Pages/PaymentPage.html";
+                window.location.replace('/Web Pages/PaymentPage.html');
             }
 
             else if (userType === 'student' || userType === 'teacher') {
@@ -109,7 +109,7 @@
                     let result = await response.json(); // Parse JSON correctly
                     if (response.ok) {
                         alert(result.message);
-                        window.location.href = '/Web Pages/LoginPage.html';  // Redirect to login page
+                        window.location.replace('/Web Pages/LoginPage.html');  // Redirect to login page
                     } else {
                         alert("Error: " + result.error);
                     }
