--- a/Web Pages/LoginPage.html
+++ b/Web Pages/LoginPage.html
@@ -17,7 +17,10 @@
         <h2 class="form-title">Login</h2> <!-- Title inside the box -->
         <form id="loginForm">
             <input type="text" placeholder="Username *" required>
-            <input type="password" placeholder="Password *" required>
+            <div class="password-container">
+                <input type="password" id="password" name="password" placeholder="Password *" required>
+                <button type="button" class="toggle-password" onclick="togglePassword('password', this)">🙈</button>
+            </div>
 
             <div class="dropdown">
                 <select id="dropdown" required>
@@ -74,6 +77,17 @@
                 showPopup("An error occurred while logging in.", "error", 1700);
             }
         });
+
+        function togglePassword(fieldId, button) {
+            let passwordField = document.getElementById(fieldId);
+            if (passwordField.type === "password") {
+                passwordField.type = "text";
+                button.textContent = "🙉"; // Hands off eyes
+            } else {
+                passwordField.type = "password";
+                button.textContent = "🙈"; // Hands covering eyes
+            }
+        }
 
         function showPopup(message, type, time) {
             let popup = document.createElement("div");
