--- a/Web Pages/RegisterPage.html
+++ b/Web Pages/RegisterPage.html
@@ -18,14 +18,22 @@
         <form id="registerForm" action="/register" method="POST">
             <input type="text" name="name" placeholder="Name *" required>
             <input type="text" name="username" placeholder="Username *" required>
-            <input type="password" name="password" placeholder="Password *" required>
-            <input type="password" name="confirm_password" placeholder="Confirm password *" required>
+
+            <div class="password-container">
+                <input type="password" id="password" name="password" placeholder="Password *" required>
+                <button type="button" class="toggle-password" onclick="togglePassword('password', this)">🙈</button>
+            </div>
+            
+            <div class="password-container">
+                <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm password *" required>
+                <button type="button" class="toggle-password" onclick="togglePassword('confirm_password', this)">🙈</button>
+            </div>
 
             <div class="dropdown">
                 <select name="user_type" id="dropdown" required>
-                    <option value="student">Student</option>
-                    <option value="teacher">Teacher</option>
-                    <option value="member">Member</option>
+                    <option value="student">Register as Student</option>
+                    <option value="teacher">Register as Teacher</option>
+                    <option value="member">Register as Member</option>
                 </select>
             </div>
     
@@ -122,6 +130,17 @@
                 });
             }
         });
+
+        function togglePassword(fieldId, button) {
+            let passwordField = document.getElementById(fieldId);
+            if (passwordField.type === "password") {
+                passwordField.type = "text";
+                button.textContent = "🙉"; // Hands off eyes
+            } else {
+                passwordField.type = "password";
+                button.textContent = "🙈"; // Hands covering eyes
+            }
+        }
 
         function showPopup(message, type, time) {
             let popup = document.createElement("div");
