--- a/Web Pages/LoginPage.html
+++ b/Web Pages/LoginPage.html
@@ -19,11 +19,12 @@
             <input type="text" placeholder="Username *" required>
             <div class="password-container">
                 <input type="password" id="password" name="password" placeholder="Password *" required>
-                <button type="button" class="toggle-password" onclick="togglePassword('password', this)">🙈</button>
+                <button type="button" class="toggle-password" onclick="togglePassword('password', this)">👀</button>
             </div>
 
             <div class="dropdown">
                 <select id="dropdown" required>
+                    <option value="" disabled selected hidden>Login as :</option>
                     <option value="student">Student</option>
                     <option value="teacher">Teacher</option>
                     <option value="member">Member</option>
@@ -82,10 +83,10 @@
             let passwordField = document.getElementById(fieldId);
             if (passwordField.type === "password") {
                 passwordField.type = "text";
-                button.textContent = "🙉"; // Hands off eyes
+                button.textContent = "👓"; // Hands off eyes
             } else {
                 passwordField.type = "password";
-                button.textContent = "🙈"; // Hands covering eyes
+                button.textContent = "👀"; // Hands covering eyes
             }
         }
 
