--- a/Web Pages/RegisterPage.html
+++ b/Web Pages/RegisterPage.html
@@ -8,11 +8,9 @@
     <link rel="stylesheet" href="/Web Pages/Popup.css">
 </head>
 <body>
-    <div class="navbar">
-        <a href="#" id="home">
-            <img src="/Web Pages/Images/komodoLogo.png" alt="Logo" class="logo">
-        </a>
-    </div>
+    <a href="#" id="home">
+        <img src="/Web Pages/Images/komodoLogo.png" alt="Logo" class="logo">
+    </a>
     <div class="form-container register-box">
         <h2 class="form-title">Register to Komodo Hub</h2>
         <form id="registerForm" action="/register" method="POST">
@@ -21,19 +19,20 @@
 
             <div class="password-container">
                 <input type="password" id="password" name="password" placeholder="Password *" required>
-                <button type="button" class="toggle-password" onclick="togglePassword('password', this)">🙈</button>
+                <button type="button" class="toggle-password" onclick="togglePassword('password', this)">👀</button>
             </div>
             
             <div class="password-container">
                 <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm password *" required>
-                <button type="button" class="toggle-password" onclick="togglePassword('confirm_password', this)">🙈</button>
+                <button type="button" class="toggle-password" onclick="togglePassword('confirm_password', this)">👀</button>
             </div>
 
             <div class="dropdown">
                 <select name="user_type" id="dropdown" required>
-                    <option value="student">Register as Student</option>
-                    <option value="teacher">Register as Teacher</option>
-                    <option value="member">Register as Member</option>
+                    <option value="" disabled selected hidden>Register as :</option>
+                    <option value="student">Student</option>
+                    <option value="teacher">Teacher</option>
+                    <option value="member">Member</option>
                 </select>
             </div>
     
@@ -135,10 +134,10 @@
             let passwordField = document.getElementById(fieldId);
             if (passwordField.type === "password") {
                 passwordField.type = "text";
-                button.textContent = "🙉"; // Hands off eyes
+                button.textContent = "👓"; // Hands off eyes
             } else {
                 passwordField.type = "password";
-                button.textContent = "🙈"; // Hands covering eyes
+                button.textContent = "👀"; // Hands covering eyes
             }
         }
 
