--- a/Web Pages/ProfilePrivateView.html
+++ b/Web Pages/ProfilePrivateView.html
@@ -29,11 +29,11 @@
             <div class="profile-container">
                 <img id="profile-avatar" src="Images/default.png" alt="Profile Picture">  
                 <div class="profile-info">
-                    <h2 class="name">Alvisha Aslam</h2> <!-- Name -->
-                    <p class="username">@alv123</p>
-                    <p class="role"><strong>Role:</strong> Student</p> <!-- Role -->
+                    <h2 class="name" id="display-name">Loading...</h2> 
+                    <p class="username" id="display-username">@loading</p>
+                    <p class="role"><strong>Role:</strong> <span id="display-role">Loading...</span></p>
                 </div>
-            </div>
+            </div>      
 
             <!-- Avatar Selection & Password Change -->
             <div class="settings-container">
