updated jigsaw Game

--- a/Web Pages/JigsawGame.html
+++ b/Web Pages/JigsawGame.html
@@ -62,7 +62,7 @@
                         <input type="checkbox" id="toggleBackgroundCheckbox">
                         <span class="slider"></span>
                     </label>
-                    <span id="toggleLabel">Hide: Off</span>
+                    <span id="toggleLabel" class="hide-offset">Hide: Off</span>
                     
                     <!-- Exit Button -->
                     <button id="exit-game-button" onclick="exitGame()">Quit Game</button>
