--- a/Web Pages/LoginPage.html
+++ b/Web Pages/LoginPage.html
@@ -19,7 +19,7 @@
             <input type="text" placeholder="Username *" required>
             <div class="password-container">
                 <input type="password" id="password" name="password" placeholder="Password *" required>
-                <button type="button" class="toggle-password" onclick="togglePassword('password', this)">👀</button>
+                <button type="button" class="toggle-password" onclick="togglePassword('password', this)">👓</button>
             </div>
 
             <div class="dropdown">
@@ -83,10 +83,10 @@
             let passwordField = document.getElementById(fieldId);
             if (passwordField.type === "password") {
                 passwordField.type = "text";
-                button.textContent = "👓"; // Hands off eyes
+                button.textContent = "👀"; // Hands off eyes
             } else {
                 passwordField.type = "password";
-                button.textContent = "👀"; // Hands covering eyes
+                button.textContent = "👓"; // Hands covering eyes
             }
         }
 
