--- a/Web Pages/RegisterPage.html
+++ b/Web Pages/RegisterPage.html
@@ -19,12 +19,12 @@
 
             <div class="password-container">
                 <input type="password" id="password" name="password" placeholder="Password *" required>
-                <button type="button" class="toggle-password" onclick="togglePassword('password', this)">👀</button>
+                <button type="button" class="toggle-password" onclick="togglePassword('password', this)">👓</button>
             </div>
             
             <div class="password-container">
                 <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm password *" required>
-                <button type="button" class="toggle-password" onclick="togglePassword('confirm_password', this)">👀</button>
+                <button type="button" class="toggle-password" onclick="togglePassword('confirm_password', this)">👓</button>
             </div>
 
             <div class="dropdown">
@@ -134,10 +134,10 @@
             let passwordField = document.getElementById(fieldId);
             if (passwordField.type === "password") {
                 passwordField.type = "text";
-                button.textContent = "👓"; // Hands off eyes
+                button.textContent = "👀"; // Hands off eyes
             } else {
                 passwordField.type = "password";
-                button.textContent = "👀"; // Hands covering eyes
+                button.textContent = "👓"; // Hands covering eyes
             }
         }
 
