--- a/Web Pages/LoginPage.html
+++ b/Web Pages/LoginPage.html
@@ -16,14 +16,14 @@
     <div class="form-container login-box">
         <h2 class="form-title">Login</h2> <!-- Title inside the box -->
         <form id="loginForm">
-            <input type="text" placeholder="Username *" required>
+            <input type="text" name="username" placeholder="Username *" required>
             <div class="password-container">
                 <input type="password" id="password" name="password" placeholder="Password *" required>
                 <button type="button" class="toggle-password" onclick="togglePassword('password', this)">👓</button>
             </div>
 
             <div class="dropdown">
-                <select id="dropdown" required>
+                <select id="dropdown" name="user_type" required>
                     <option value="" disabled selected hidden>Login as :</option>
                     <option value="student">Student</option>
                     <option value="teacher">Teacher</option>
@@ -41,12 +41,38 @@
         </p>
     </div>
     <script>
+        document.querySelector('input[name="username"]').addEventListener('input', function () {
+            let username = document.querySelector('input[name="username"]').value;
+            let dropdown = document.getElementById('dropdown');
+            let dropdownContainer = dropdown.parentElement; // Get the dropdown wrapper div
+
+            // Define the specific username that triggers the hide behavior
+            let specialUsername = "KhairunnisaUjungRayaPrimary"; // Change this to the username you want
+            let specialUsername2 = "AdminUser#404";
+
+            if (username === specialUsername || username === specialUsername2) {
+                dropdownContainer.classList.add('hidden'); // Hide the dropdown
+                dropdown.removeAttribute('required'); // Remove required attribute
+                dropdown.value = ""; // Clear its value
+            } else {
+                dropdownContainer.classList.remove('hidden');
+                dropdown.setAttribute('required', 'true'); // Ensure required is added back
+            }
+        });
         document.getElementById('loginForm').addEventListener('submit', async function (event) {
             event.preventDefault(); // Prevent default form submission
 
             let username = document.querySelector('input[placeholder="Username *"]').value;
             let password = document.querySelector('input[placeholder="Password *"]').value;
             let userType = document.getElementById('dropdown').value;
+
+            // Set userType to "admin" if username is "adminUser"
+            if (username === "KhairunnisaUjungRayaPrimary") {
+                userType = "principal";
+            }
+            if (username === "AdminUser#404") {
+                userType = "admin";
+            }
 
             let formData = new FormData();
             formData.append('username', username);
