--- a/Web Pages/LoginPage.html
+++ b/Web Pages/LoginPage.html
@@ -16,9 +16,9 @@
     <div class="form-container login-box">
         <h2 class="form-title">Login</h2> <!-- Title inside the box -->
         <form id="loginForm">
-            <input type="text" name="username" placeholder="Username *" required>
+            <input type="text" name="username" placeholder="Username *" oninput="this.value = this.value.replace(/\s/g, '')" required>
             <div class="password-container">
-                <input type="password" id="password" name="password" placeholder="Password *" required>
+                <input type="password" id="password" name="password" placeholder="Password *" oninput="this.value = this.value.replace(/\s/g, '')" required>
                 <button type="button" class="toggle-password" onclick="togglePassword('password', this)">👓</button>
             </div>
 
