--- a/Web Pages/RegisterPage.html
+++ b/Web Pages/RegisterPage.html
@@ -15,15 +15,15 @@
         <h2 class="form-title">Register to Komodo Hub</h2>
         <form id="registerForm" action="/register" method="POST">
             <input type="text" name="name" placeholder="Name *" required>
-            <input type="text" name="username" placeholder="Username *" required>
+            <input type="text" name="username" placeholder="Username *" oninput="this.value = this.value.replace(/\s/g, '')" required>
 
             <div class="password-container">
-                <input type="password" id="password" name="password" placeholder="Password *" required>
+                <input type="password" id="password" name="password" placeholder="Password *" oninput="this.value = this.value.replace(/\s/g, '')" required>
                 <button type="button" class="toggle-password" onclick="togglePassword('password', this)">👓</button>
             </div>
             
             <div class="password-container">
-                <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm password *" required>
+                <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm password *" oninput="this.value = this.value.replace(/\s/g, '')" required>
                 <button type="button" class="toggle-password" onclick="togglePassword('confirm_password', this)">👓</button>
             </div>
 
@@ -36,7 +36,7 @@
                 </select>
             </div>
     
-            <input id="accessCode" name="access_code" type="text" placeholder="Access code" required>
+            <input id="accessCode" name="access_code" type="text" placeholder="Access code" oninput="this.value = this.value.replace(/\D/g, '')" required>
 
             <img src="/Web Pages/Images/giphy.gif" alt="Loading animation" class="gif">
 
@@ -145,6 +145,18 @@
                 if (!accessCode) {
                     showPopup("Access code is required!", "error", 1500);
                     return;
+                }
+                if (userType === 'student'){
+                    if (accessCode != 12345){
+                        showPopup("Invalid access code!", "error", 1500);
+                        return;
+                    }
+                }
+                else if (userType === 'teacher'){
+                    if (accessCode != 54321){
+                        showPopup("Invalid access code!", "error", 1500);
+                        return;
+                    }
                 }
                 formData.append('access_code', accessCode);
             }
