Updated Profile Private view and main
now the points and posts are shown from database according to the user logged in

--- a/Web Pages/ProfilePrivateView.html
+++ b/Web Pages/ProfilePrivateView.html
@@ -66,8 +66,8 @@
         <div class="contributions-container">
             <h3>My Contributions</h3>
             
-            <p><strong>📜 Posts: </strong> <span id="posts">10</span></p>
-            <p><strong>⭐ Points: </strong> <span id="points">550</span></p>
+            <p><strong>📜 Posts: </strong> <span id="posts">Loading...</span></p>
+            <p><strong>⭐ Points: </strong> <span id="points">Loading...</span></p>
             <p><strong>🎖 Rank: </strong> <span id="rank">Beginner</span></p>
         
             <!-- Progress Bar -->
