Admin profile also made

--- a/Web Pages/ProfilePrivateView.html
+++ b/Web Pages/ProfilePrivateView.html
@@ -69,7 +69,16 @@
             <p><strong>📜 Posts: </strong> <span id="posts">Loading...</span></p>
             <p><strong>⭐ Points: </strong> <span id="points">Loading...</span></p>
             <p><strong>🎖 Rank: </strong> <span id="rank">Beginner</span></p>
-        
+            <p id="membersContribution" style="display: none;">
+                <strong>👥 Members Involved: </strong> <span id="members">Loading...</span>
+            </p>
+            <p id="staffContribution" style="display: none;">
+                <strong>🏫 School Staff Involved: </strong> <span id="staff">Loading...</span>
+            </p>
+            <!-- New Students Involved -->
+            <p id="studentsContribution" style="display: none;">
+                <strong>🎒 Students Involved: </strong> <span id="students">Loading...</span>
+            </p>
             <!-- Progress Bar -->
             <div class="progress-bar">
                 <div class="progress" id="progress"></div>
