school profile connected

--- a/Web Pages/SchoolPrivatePage.html
+++ b/Web Pages/SchoolPrivatePage.html
@@ -35,10 +35,10 @@
             <div class="profile-container">
                 <img id="profile-avatar" src="Images/schoolprof.jpg" alt="Profile Picture">  
                 <div class="profile-info">
-                    <h2 class="name">Ujung Raya Primary School</h2>
-                    <p class="username">@KhairunnisaUjungRayaPrimary</p>
-                    <p class="role"><strong>Role:</strong> Principal</p>
-                    <p class="role"><strong>About Us:</strong> Located in the heart of Ujung Kulon, Ujung Raya Primary School is dedicated to nurturing young minds while protecting our natural heritage. Surrounded by the Javan Rhinoceros Conservation Area, we inspire students to learn, explore, and lead in environmental conservation. 
+                    <h2 class="name" id="display-name">Loading...</h2> 
+                    <p class="username" id="display-username">@loading</p>
+                    <p class="role"><strong>Role:</strong> <span id="display-role">Loading...</span></p>
+                    <p class="about"><strong>About Us:</strong> Located in the heart of Ujung Kulon, Ujung Raya Primary School is dedicated to nurturing young minds while protecting our natural heritage. Surrounded by the Javan Rhinoceros Conservation Area, we inspire students to learn, explore, and lead in environmental conservation. 
                         Through our partnership with Komodo Hub, we integrate conservation education into our curriculum, empowering students to actively participate in protecting endangered species. We are committed to fostering responsible, compassionate, and environmentally conscious leaders of tomorrow.
                         Join us in learning and leading for a better future.</p>
                 </div>
@@ -77,10 +77,10 @@
             <div class="contributions-container" style="width: 48%;">
                 <h3>School Contributions</h3>
                 
-                <p><strong>📜 Posts: </strong> <span id="posts">10</span></p>
-                <p><strong>⭐ Points: </strong> <span id="points">550</span></p>
-                <p><strong>📘 Teachers Involved: </strong> <span id="teachers">15</span></p>
-                <p><strong>🎓 Students Involved: </strong> <span id="students">300</span></p>
+                <p><strong>📜 Posts: </strong> <span id="posts">Loading...</span></p>
+                <p><strong>⭐ Points: </strong> <span id="points">Loading...</span></p>
+                <p><strong>📘 Teachers Involved: </strong> <span id="teachers">Loading...</span></p>
+                <p><strong>🎓 Students Involved: </strong> <span id="students">Loading...</span></p>
                 <p><strong>🎖 Rank: </strong> <span id="rank">Beginner</span></p>
 
                 <!-- Progress Bar -->
