--- a/Web Pages/SchoolPrivatePage.html
+++ b/Web Pages/SchoolPrivatePage.html
@@ -88,7 +88,7 @@
                     <div class="progress" id="progress"></div>
                 </div>
 
-                <p class="next-rank" id="next-rank">Next Rank: Advanced</p>
+                <p><strong>🎖 Next Rank: </strong><span class="next-rank" id="next-rank">Advanced </span></p>
                 <button onclick="deleteAccount()" class="delete-button">🗑 Delete Account</button>
             </div>                        
         </div>
