--- a/Web Pages/SchoolPrivatePage.html
+++ b/Web Pages/SchoolPrivatePage.html
@@ -24,7 +24,7 @@
     
         <a href="HomePage.html">
            <!-- Logout Button -->
-           <button class="logout-button" onclick="logout()">Logout</button>
+           <button class="logout-button" onclick="logout(event)">Logout</button>
         </a>
     </div>
 
