2nd fix on accessing the payment page

--- a/Web Pages/RegisterPage.html
+++ b/Web Pages/RegisterPage.html
@@ -38,7 +38,7 @@
                 </select>
             </div>
     
-            <input id="accessCode" name="access_code" type="text" placeholder="Access code" oninput="this.value = this.value.replace(/\D/g, '')" required>
+            <input id="accessCode" name="access_code" type="text" placeholder="Access code" oninput="this.value = this.value.replace(/\D/g, '')" style="display: none;">
 
             <img src="/Web Pages/Images/giphy.gif" alt="Loading animation" class="gif">
 
