--- a/Web Pages/RegisterPage.html
+++ b/Web Pages/RegisterPage.html
@@ -99,7 +99,7 @@
 
 
 
-        document.getElementById('registerForm').addEventListener('submit', function(event) {
+        document.getElementById('registerForm').addEventListener('submit', async function(event) {
             event.preventDefault(); // Prevent default form submission
 
             let name = document.querySelector('input[placeholder="Name *"]').value;
@@ -128,6 +128,7 @@
             formData.append('username', username);
             formData.append('password', password);
             formData.append('user_type', userType);
+            formData.append('accessCode', accessCode);
 
             // If user is a member, store the data in localStorage and redirect to payment page
             if (userType === 'member') {
@@ -148,19 +149,10 @@
                     showPopup("Access code is required!", "error", 1500, accessCode);
                     return;
                 }
-                if (userType === 'student'){
-                    if (accessCode != 12345){
-                        showPopup("Invalid access code!", "error", 1500, accessCode);
-                        return;
-                    }
+                let isValid = await validateAccessCode(userType, accessCode);
+                if (!isValid) {
+                    return; // Stop registration if the access code is invalid
                 }
-                else if (userType === 'teacher'){
-                    if (accessCode != 54321){
-                        showPopup("Invalid access code!", "error", 1500, accessCode);
-                        return;
-                    }
-                }
-                formData.append('access_code', accessCode);
             }
             // Handle student or teacher registration immediately
             if (userType != 'member'){
@@ -185,6 +177,28 @@
             }
         });
 
+        async function validateAccessCode(userType, accessCode) {
+            try {
+                const response = await fetch('/validate-access', {  // Change port if necessary
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ userType, accessCode })
+                });
+
+                const data = await response.json();
+
+                if (!data.success) {
+                    showPopup(data.message, "error", 1500, accessCode);
+                    return false;
+                }
+                return true;  // Proceed with registration
+            } catch (error) {
+                console.error('Error:', error);
+                showPopup("Invalid access code", "error", 1500);
+                return false;
+            }
+        }
+        
         function togglePassword(fieldId, button) {
             let passwordField = document.getElementById(fieldId);
             if (passwordField.type === "password") {
