--- a/Web Pages/SchoolLibrary.html
+++ b/Web Pages/SchoolLibrary.html
@@ -36,15 +36,26 @@
             </a>
             <div class="modal-info">
                 <div id="modal-profile-info" class="profile-info">
-                    <span id="modal-member" class="member-name"></span>
-                    <span id="modal-member-type" class="member-type"></span>
+                    <span id="modal-username" class="username"></span>
+                    <span id="modal-role" class="role"></span>
                 </div>
-                <div id="modal-timestamp" class="timestamp">
-                    <span id="modal-date" class="date"></span>
-                    <span id="modal-time" class="time"></span>
-                </div>
+                <div id="modal-timestamp-container">
+                    <button id="delete-post-btn" class="delete-post-btn" style="display: none;">Delete</button>
+                    <div id="modal-timestamp" class="timestamp">
+                        <span id="modal-date" class="date"></span>
+                        <span id="modal-time" class="time"></span>
+                    </div>
+                </div>                                          
             </div>
         </div>
+        <div class="delete-modal-overlay" id="delete-modal-overlay"></div>
+        <div class="delete-modal" id="delete-modal">
+            <h3>Confirm Delete</h3>
+            <p>Are you sure you want to delete this post?</p>
+            <button id="confirm-delete-btn">Yes, Delete</button>
+            <button id="cancel-delete-btn">Cancel</button>
+        </div>
+
         <div class="modal-content">
             <img id="modal-image" src="" alt="Animal Image">
             <h3 id="modal-title"></h3>
