--- a/Web Pages/SchoolLibrary.html
+++ b/Web Pages/SchoolLibrary.html
@@ -17,9 +17,8 @@
             <a href="SchoolLibrary.html"><button class="school-btn">School Library</button></a>
             <a href="Post.html"><button>Post</button></a>
             <a href="Games.html"><button>Games</button></a>
-        </div>
-    
-        <a href="LoginPage.html"><button class="login">Login</button></a>
+          </div>
+        <button class="login">Login</button>
     </div>
 
     <div class="content-wrapper">
